# kustodio

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  kustodio-peer.toml  kustodio.toml  mq
example/: kustodio-peer-0.toml  kustodio-peer-1.toml  kustodio-peer-2.toml
proto/: api.proto  web.proto
src/: build.rs  lib.rs  main.rs
src/app/: mod.rs
src/cli/: mod.rs
src/client/: mod.rs
src/config/: args.rs  cli.rs  file.rs  mod.rs
src/handler/: event.rs  handler.rs  mod.rs
src/lock/: lock.rs
src/proto/: api.proto  mod.rs  swarm.proto
src/server/: grpc.rs  http.rs
src/storage/: memory.rs  traits.rs
src/swarm/: mod.rs  swarm.rs
src/util/: mod.rs
ui/: 404.html  Cargo.toml  index.html  lib.js  package-lock.json  package.json  web_pb.js  webpack.config.js
ui/src/: app.rs  config.rs  lib.rs  utils.rs
ui/src/client/: mod.rs
ui/src/pages/: home.rs  locks.rs  mod.rs  not_found.rs  system.rs
ui/src/proto/: api.rs  mod.rs  web.rs
