[package]
name = "kustodio"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[dependencies]
gossip = "0.0.3"
env_logger = "*"
anyhow = "*"
ctrlc = { version = "3.0", features = ["termination"] }
hashbrown = "0.12.0"
bloomfilter = "1.0.9"
prost = "*"
bytes = "1.1.0"
log = "*"
tonic = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
config = "0.12"
clap = "3.1.6"
clap_derive = "3.1.4"
serde = { version = "1.0", features = ["derive"] }
nano-id = "*"

[build-dependencies]
prost-build = "*"
tonic-build = "0.6"
