[package]
name = "kustodio"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[[bin]]
name = "kustodio"
test = false
bench = false

[dependencies]
gossip = "0.0.3"
env_logger = "*"
anyhow = "*"
ctrlc = { version = "3.0", features = ["termination"] }
hashbrown = "0.12.0"
bloomfilter = "1.0.9"
prost = "*"
bytes = "1.1.0"
log = "*"
tonic = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
config = "0.12"
clap = "3.1.6"
clap_derive = "3.1.4"
serde = { version = "1.0", features = ["derive"] }
nano-id = "*"
sysinfo = "*"
crossbeam = "0.8.1"
futures = "0.3.21"
tokio-stream = { version = "0.1.8", features = ["sync"]}
futures-core = "0.3.21"
hyper = "0.14.18"
rust-embed = { version = "6.3.0", features = ["debug-embed"]}
http = "0.2.6"
mime_guess = "2.0.4"
serde_json = "1.0.79"
tonic-web = "0.3.0"
tower = "0.4.12"
tower-http = { version = "0.3.0", features = ["trace"]}

[build-dependencies]
prost-build = "*"
tonic-build = "0.7"
protoc-rust = "2"
wasm-pack = "*"
