[package]
name = "ui"
version = "0.1.0"
authors = ["Nico Kahlert <kahlert@netzlink.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
yew = "*"
yew-router = "0.16"
weblog = "0.3.0"
tracing = "0.1.33"
tracing-wasm = "0.2.1"
ybc = "0.2"

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
anyhow = "1.0.56"
reqwest = { version = "0.11.10", features = ["blocking", "json", "gzip"]}
web-sys = { version = "0.3.57", features = ["Location"]}
wasm-bindgen-futures = "0.4.30"
serde = {version = "1.0.136", features = ["serde_derive"]}
serde_json = "1.0.79"
stylist = { version = "0.10.0", features = ["yew", "yew_integration"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
