[package]
name = "ui"
version = "0.1.0"
authors = ["Nico Kahlert <kahlert@netzlink.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
yew = "*"
yew-router = "0.16"
weblog = "0.3.0"
tracing = "0.1.33"
tracing-wasm = "0.2.1"
ybc = "0.2"

protobuf = { version = "2.27.1", features = ["with-bytes"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
anyhow = "1.0.56"
reqwest = { version = "0.11.10", features = ["blocking", "json", "gzip"]}
web-sys = { version = "0.3.57", features = [
  'Location',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]}
wasm-bindgen-futures = "0.4.30"
serde = {version = "1.0.136", features = ["serde_derive"]}
serde_json = "1.0.79"
stylist = { version = "0.10.0", features = ["yew", "yew_integration"]}
toml = "0.5.9"
bytes = "1.1.0"
js-sys = "0.3.57"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true
